--- a/userscript/src/namespaced-bootstrap.css
+++ b/userscript/src/namespaced-bootstrap.css
@@ -1,8 +1,8 @@
 #canvas-quiz-stats {
   /*!
- * Bootstrap v4.5.3 (https://getbootstrap.com/)
- * Copyright 2011-2020 The Bootstrap Authors
- * Copyright 2011-2020 Twitter, Inc.
+ * Bootstrap v4.6.0 (https://getbootstrap.com/)
+ * Copyright 2011-2021 The Bootstrap Authors
+ * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
   /*# sourceMappingURL=bootstrap.css.map */
@@ -34,7 +34,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 #canvas-quiz-stats *,
@@ -62,7 +62,7 @@
 }
 #canvas-quiz-stats body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -210,9 +210,8 @@
 #canvas-quiz-stats button {
   border-radius: 0;
 }
-#canvas-quiz-stats button:focus {
-  outline: 1px dotted;
-  outline: 5px auto -webkit-focus-ring-color;
+#canvas-quiz-stats button:focus:not(:focus-visible) {
+  outline: 0;
 }
 #canvas-quiz-stats input,
 #canvas-quiz-stats button,
@@ -2106,6 +2105,10 @@
   background-color: rgba(40, 167, 69, 0.9);
   border-radius: 0.25rem;
 }
+#canvas-quiz-stats .form-row > .col > .valid-tooltip,
+#canvas-quiz-stats .form-row > [class*="col-"] > .valid-tooltip {
+  left: 5px;
+}
 #canvas-quiz-stats .was-validated :valid ~ .valid-feedback,
 #canvas-quiz-stats .was-validated :valid ~ .valid-tooltip,
 #canvas-quiz-stats .is-valid ~ .valid-feedback,
@@ -2135,7 +2138,7 @@
 #canvas-quiz-stats .custom-select.is-valid {
   border-color: #28a745;
   padding-right: calc(0.75em + 2.3125rem);
-  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center / 8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%2328a745' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e") #fff no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") right 0.75rem center / 8px 10px no-repeat, #fff url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%2328a745' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e") center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem) no-repeat;
 }
 #canvas-quiz-stats .was-validated .custom-select:valid:focus,
 #canvas-quiz-stats .custom-select.is-valid:focus {
@@ -2204,6 +2207,10 @@
   background-color: rgba(220, 53, 69, 0.9);
   border-radius: 0.25rem;
 }
+#canvas-quiz-stats .form-row > .col > .invalid-tooltip,
+#canvas-quiz-stats .form-row > [class*="col-"] > .invalid-tooltip {
+  left: 5px;
+}
 #canvas-quiz-stats .was-validated :invalid ~ .invalid-feedback,
 #canvas-quiz-stats .was-validated :invalid ~ .invalid-tooltip,
 #canvas-quiz-stats .is-invalid ~ .invalid-feedback,
@@ -2233,7 +2240,7 @@
 #canvas-quiz-stats .custom-select.is-invalid {
   border-color: #dc3545;
   padding-right: calc(0.75em + 2.3125rem);
-  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center / 8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23dc3545' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e") #fff no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") right 0.75rem center / 8px 10px no-repeat, #fff url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23dc3545' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e") center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem) no-repeat;
 }
 #canvas-quiz-stats .was-validated .custom-select:invalid:focus,
 #canvas-quiz-stats .custom-select.is-invalid:focus {
@@ -3175,7 +3182,7 @@
 #canvas-quiz-stats .dropdown-item:focus {
   color: #16181b;
   text-decoration: none;
-  background-color: #f8f9fa;
+  background-color: #e9ecef;
 }
 #canvas-quiz-stats .dropdown-item.active,
 #canvas-quiz-stats .dropdown-item:active {
@@ -3185,7 +3192,7 @@
 }
 #canvas-quiz-stats .dropdown-item.disabled,
 #canvas-quiz-stats .dropdown-item:disabled {
-  color: #6c757d;
+  color: #adb5bd;
   pointer-events: none;
   background-color: transparent;
 }
@@ -3358,11 +3365,6 @@
 #canvas-quiz-stats .input-group > .custom-file .custom-file-input:focus {
   z-index: 4;
 }
-#canvas-quiz-stats .input-group > .form-control:not(:last-child),
-#canvas-quiz-stats .input-group > .custom-select:not(:last-child) {
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-}
 #canvas-quiz-stats .input-group > .form-control:not(:first-child),
 #canvas-quiz-stats .input-group > .custom-select:not(:first-child) {
   border-top-left-radius: 0;
@@ -3375,13 +3377,21 @@
   align-items: center;
 }
 #canvas-quiz-stats .input-group > .custom-file:not(:last-child) .custom-file-label,
-#canvas-quiz-stats .input-group > .custom-file:not(:last-child) .custom-file-label::after {
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-}
 #canvas-quiz-stats .input-group > .custom-file:not(:first-child) .custom-file-label {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
+}
+#canvas-quiz-stats .input-group:not(.has-validation) > .form-control:not(:last-child),
+#canvas-quiz-stats .input-group:not(.has-validation) > .custom-select:not(:last-child),
+#canvas-quiz-stats .input-group:not(.has-validation) > .custom-file:not(:last-child) .custom-file-label::after {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+#canvas-quiz-stats .input-group.has-validation > .form-control:nth-last-child(n + 3),
+#canvas-quiz-stats .input-group.has-validation > .custom-select:nth-last-child(n + 3),
+#canvas-quiz-stats .input-group.has-validation > .custom-file:nth-last-child(n + 3) .custom-file-label::after {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
 }
 #canvas-quiz-stats .input-group-prepend,
 #canvas-quiz-stats .input-group-append {
@@ -3470,8 +3480,10 @@
 }
 #canvas-quiz-stats .input-group > .input-group-prepend > .btn,
 #canvas-quiz-stats .input-group > .input-group-prepend > .input-group-text,
-#canvas-quiz-stats .input-group > .input-group-append:not(:last-child) > .btn,
-#canvas-quiz-stats .input-group > .input-group-append:not(:last-child) > .input-group-text,
+#canvas-quiz-stats .input-group:not(.has-validation) > .input-group-append:not(:last-child) > .btn,
+#canvas-quiz-stats .input-group:not(.has-validation) > .input-group-append:not(:last-child) > .input-group-text,
+#canvas-quiz-stats .input-group.has-validation > .input-group-append:nth-last-child(n + 3) > .btn,
+#canvas-quiz-stats .input-group.has-validation > .input-group-append:nth-last-child(n + 3) > .input-group-text,
 #canvas-quiz-stats .input-group > .input-group-append:last-child > .btn:not(:last-child):not(.dropdown-toggle),
 #canvas-quiz-stats .input-group > .input-group-append:last-child > .input-group-text:not(:last-child) {
   border-top-right-radius: 0;
@@ -3557,7 +3569,7 @@
   width: 1rem;
   height: 1rem;
   content: "";
-  background: no-repeat 50% / 50% 50%;
+  background: 50% / 50% 50% no-repeat;
 }
 #canvas-quiz-stats .custom-checkbox .custom-control-label::before {
   border-radius: 0.25rem;
@@ -3630,7 +3642,7 @@
   line-height: 1.5;
   color: #495057;
   vertical-align: middle;
-  background: #fff url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center / 8px 10px;
+  background: #fff url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") right 0.75rem center / 8px 10px no-repeat;
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
   -webkit-appearance: none;
@@ -3690,6 +3702,7 @@
   width: 100%;
   height: calc(1.5em + 0.75rem + 2px);
   margin: 0;
+  overflow: hidden;
   opacity: 0;
 }
 #canvas-quiz-stats .custom-file-input:focus ~ .custom-file-label {
@@ -3714,6 +3727,7 @@
   z-index: 1;
   height: calc(1.5em + 0.75rem + 2px);
   padding: 0.375rem 0.75rem;
+  overflow: hidden;
   font-weight: 400;
   line-height: 1.5;
   color: #495057;
@@ -3747,7 +3761,7 @@
   appearance: none;
 }
 #canvas-quiz-stats .custom-range:focus {
-  outline: none;
+  outline: 0;
 }
 #canvas-quiz-stats .custom-range:focus::-webkit-slider-thumb {
   box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
@@ -3912,10 +3926,8 @@
 #canvas-quiz-stats .nav-tabs {
   border-bottom: 1px solid #dee2e6;
 }
-#canvas-quiz-stats .nav-tabs .nav-item {
-  margin-bottom: -1px;
-}
 #canvas-quiz-stats .nav-tabs .nav-link {
+  margin-bottom: -1px;
   border: 1px solid transparent;
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
@@ -4056,8 +4068,11 @@
   height: 1.5em;
   vertical-align: middle;
   content: "";
-  background: no-repeat center center;
-  background-size: 100% 100%;
+  background: 50% / 100% 100% no-repeat;
+}
+#canvas-quiz-stats .navbar-nav-scroll {
+  max-height: 75vh;
+  overflow-y: auto;
 }
 @media (max-width: 575.98px) {
   #canvas-quiz-stats .navbar-expand-sm > .container,
@@ -4096,6 +4111,9 @@
   #canvas-quiz-stats .navbar-expand-sm > .container-xl {
     -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
+  }
+  #canvas-quiz-stats .navbar-expand-sm .navbar-nav-scroll {
+    overflow: visible;
   }
   #canvas-quiz-stats .navbar-expand-sm .navbar-collapse {
     display: -ms-flexbox !important;
@@ -4145,6 +4163,9 @@
     -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
   }
+  #canvas-quiz-stats .navbar-expand-md .navbar-nav-scroll {
+    overflow: visible;
+  }
   #canvas-quiz-stats .navbar-expand-md .navbar-collapse {
     display: -ms-flexbox !important;
     display: flex !important;
@@ -4192,6 +4213,9 @@
   #canvas-quiz-stats .navbar-expand-lg > .container-xl {
     -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
+  }
+  #canvas-quiz-stats .navbar-expand-lg .navbar-nav-scroll {
+    overflow: visible;
   }
   #canvas-quiz-stats .navbar-expand-lg .navbar-collapse {
     display: -ms-flexbox !important;
@@ -4241,6 +4265,9 @@
     -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
   }
+  #canvas-quiz-stats .navbar-expand-xl .navbar-nav-scroll {
+    overflow: visible;
+  }
   #canvas-quiz-stats .navbar-expand-xl .navbar-collapse {
     display: -ms-flexbox !important;
     display: flex !important;
@@ -4285,6 +4312,9 @@
 #canvas-quiz-stats .navbar-expand > .container-xl {
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
+}
+#canvas-quiz-stats .navbar-expand .navbar-nav-scroll {
+  overflow: visible;
 }
 #canvas-quiz-stats .navbar-expand .navbar-collapse {
   display: -ms-flexbox !important;
@@ -4598,15 +4628,11 @@
   background-color: #e9ecef;
   border-radius: 0.25rem;
 }
-#canvas-quiz-stats .breadcrumb-item {
-  display: -ms-flexbox;
-  display: flex;
-}
 #canvas-quiz-stats .breadcrumb-item + .breadcrumb-item {
   padding-left: 0.5rem;
 }
 #canvas-quiz-stats .breadcrumb-item + .breadcrumb-item::before {
-  display: inline-block;
+  float: left;
   padding-right: 0.5rem;
   color: #6c757d;
   content: "/";
@@ -5020,8 +5046,8 @@
   background-size: 1rem 1rem;
 }
 #canvas-quiz-stats .progress-bar-animated {
-  -webkit-animation: progress-bar-stripes 1s linear infinite;
-  animation: progress-bar-stripes 1s linear infinite;
+  -webkit-animation: 1s linear infinite progress-bar-stripes;
+  animation: 1s linear infinite progress-bar-stripes;
 }
 @media (prefers-reduced-motion: reduce) {
   #canvas-quiz-stats .progress-bar-animated {
@@ -5616,7 +5642,7 @@
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -5724,7 +5750,7 @@
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -5990,7 +6016,7 @@
   display: inline-block;
   width: 20px;
   height: 20px;
-  background: no-repeat 50% / 100% 100%;
+  background: 50% / 100% 100% no-repeat;
 }
 #canvas-quiz-stats .carousel-control-prev-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
@@ -6069,8 +6095,8 @@
   border: 0.25em solid currentColor;
   border-right-color: transparent;
   border-radius: 50%;
-  -webkit-animation: spinner-border 0.75s linear infinite;
-  animation: spinner-border 0.75s linear infinite;
+  -webkit-animation: 0.75s linear infinite spinner-border;
+  animation: 0.75s linear infinite spinner-border;
 }
 #canvas-quiz-stats .spinner-border-sm {
   width: 1rem;
@@ -6107,12 +6133,19 @@
   background-color: currentColor;
   border-radius: 50%;
   opacity: 0;
-  -webkit-animation: spinner-grow 0.75s linear infinite;
-  animation: spinner-grow 0.75s linear infinite;
+  -webkit-animation: 0.75s linear infinite spinner-grow;
+  animation: 0.75s linear infinite spinner-grow;
 }
 #canvas-quiz-stats .spinner-grow-sm {
   width: 1rem;
   height: 1rem;
+}
+@media (prefers-reduced-motion: reduce) {
+  #canvas-quiz-stats .spinner-border,
+  #canvas-quiz-stats .spinner-grow {
+    -webkit-animation-duration: 1.5s;
+    animation-duration: 1.5s;
+  }
 }
 #canvas-quiz-stats .align-baseline {
   vertical-align: baseline !important;
@@ -7270,7 +7303,6 @@
 #canvas-quiz-stats .user-select-all {
   -webkit-user-select: all !important;
   -moz-user-select: all !important;
-  -ms-user-select: all !important;
   user-select: all !important;
 }
 #canvas-quiz-stats .user-select-auto {
